[package]
name = "jib"
version = "0.1.0"
edition = "2021"
authors = ["Joris Hartog <jorishartog@hotmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jib"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.9.6"
walkdir = "2.4.0"
